--- a/ugh.css
+++ b/ugh.css
@@ -20,5 +20,12 @@ body{
     height: 12%;
     width: 12%;
 }
-
+.me {
+    height: 20%;
+    width: 20%;
+}
+.real {
+    height: 40%;
+    width: 40%;
+}
     
