--- a/ugh.css
+++ b/ugh.css
@@ -2,6 +2,7 @@ body{
     background-image: url(https://th.bing.com/th/id/R.d1057f711bf410c988752910ce17aa92?rik=xqel5Iqp7rVINw&riu=http%3a%2f%2f1.bp.blogspot.com%2f-6zRZlrlVb4s%2fTxC-jZT549I%2fAAAAAAAAJeM%2fSJEwb2oRznw%2fs1600%2farticle-2085835-0F6D781400000578-455_638x689.jpg&ehk=BtyxZRntlZxztKrja4YX%2brCUDRciY9O1%2f2FcQ1AcNy8%3d&risl=&pid=ImgRaw&r=0);
 }
 .guh-container{
+    display:flex;
     position: absolute;
 }
 .guh {
@@ -9,23 +10,47 @@ body{
     left: 118%;
     height: 60%;
     width: 60%;
-    display:flex;
     flex-direction: column;
 }
-.dog {
-    height: 20%;
-    width: 20%;
+/* .content{
+    position: relative;
+} */
+
+#dog {
+    left: 2%;
+    height: 50%;
+    width: 30%;
+    position: absolute;
+    top: 80%;
 }
-.chopped {
-    height: 12%;
-    width: 12%;
-}
-.me {
-    height: 20%;
-    width: 20%;
-}
-.real {
+#chopped {
     height: 40%;
     width: 40%;
-}
+    left: 100%;
+    top: 100%;
+    /* display: flex;
+    flex-direction: column; */
     
+}
+.me {
+    position: absolute;
+    top: 20%;
+    left: 123%;
+    height: 80%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    
+}
+.drones{
+    position: absolute;
+    top: 68%;
+    left: 34%;
+}
+/* .real {
+    height: 30%;
+    width: 30%;
+} */
+.yes {
+    justify-content: center;
+}
